# padim-anomaly-detection

./: Dockerfile  Makefile  README.md  pyproject.toml
src/: dataset.py  main.py  padim.py  split_dataset.py
