[tool.poetry]
name = "anomaly_detection"
version = "0.1.0"
description = ""
authors = ["ozora-ogino <ozora.ogino.1127@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
tqdm = "^4.64.0"
sklearn = "^0.0"
scipy = "^1.8.0"
matplotlib = "^3.5.1"
torch = "^1.11.0"
torchvision = "^0.12.0"
scikit-image = "^0.19.2"
joblib = "^1.1.0"
numpy = "1.22.3"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pylint = "^2.13.5"
isort = "^5.10.1"
pre-commit = "^2.18.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
# The only deviation is to use longer line lengths.
line-length = 120

[tool.isort]
# Isort already has a compatible profile for black.
profile = 'black'
line_length = 120
known_third_party = ["wandb"]

[tool.pylint.format]
max-line-length = "120"

[tool.pylint.messages_control]
disable = """
R, C,
eval-used,
global-statement,
no-member,
import-error,
fixme,
attribute-defined-outside-init,
no-name-in-module,
protected-access,
unnecessary-lambda,
logging-format-interpolation,
broad-except
"""
enable = "C0303"  # Trailing whitespace
